# holo-update-conductor-config

./: Cargo.toml  README.md  default.nix  shell.nix
.github/workflows/: main.yml
nix/: sources.json
resources/test/: expected-new-conductor-config.toml  expected-old-conductor-config.toml  new-conductor-config.toml  nix-conductor-config.toml  old-conductor-config.toml
src/: main.rs  tests.rs  types.rs  utils.rs
tests/: conductor-config.toml
