[package]
name = "holo-update-conductor-config"
version = "0.2.1-alpha.0"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
ed25519-dalek = { version = "1.0.1", features = ["nightly", "serde"] }
env_logger = "0.7.1"
hpos-config-core = { git = "https://github.com/Holo-Host/hpos-config", branch = "develop" }
log = "0.4.11"
paw = "1.0.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
structopt = { version = "0.3.18", features = ["paw"] }
toml = "0.5.7"
ureq  = { version = "1.5.0", features = ["json"] }

[dev-dependencies]
tempfile = "3.1.0"

[package.metadata.release]
disable-publish = true
